2013-04-03  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56817
	* tree-ssa-loop-ivcanon.c (tree_unroll_loops_completely):
	Split out ...
	(tree_unroll_loops_completely_1): ... new function to manually
	walk the loop tree, properly defering outer loops of unrolled
	loops to later iterations.

2013-04-03  Marc Glisse  <marc.glisse@inria.fr>

	* tree-vect-stmts.c (vectorizable_store): Accept BIT_FIELD_REF.
	(vectorizable_load): Likewise.
	* tree-vect-slp.c (vect_build_slp_tree): Likewise.
	* tree-vect-data-refs.c (vect_create_data_ref_ptr): Handle VECTOR_TYPE.

2013-04-03  Marc Glisse  <marc.glisse@inria.fr>

	* tree-flow-inline.h (get_addr_base_and_unit_offset_1): Handle
	BIT_FIELD_REF.

2013-04-03  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (emit_nop_for_insn): Handle JUMP_TABLE_DATA.

2013-04-03  Bin Cheng  <bin.cheng@arm.com>

	* rtl.h (AUTO_INC_DEC): Fix typo of HAVE_POST_MODIFY_DISP.

2013-04-03  Marc Glisse  <marc.glisse@inria.fr>

	PR tree-optimization/56790
	* fold-const.c (fold_ternary_loc) <VEC_COND_EXPR>: Add constant folding.

2013-04-03  Marc Glisse  <marc.glisse@inria.fr>

	* simplify-rtx.c (simplify_binary_operation_1) <VEC_SELECT>:
	Handle VEC_MERGE.
	(simplify_ternary_operation) <VEC_MERGE>: Use unsigned HOST_WIDE_INT
	for masks. Test for side effects. Handle nested VEC_MERGE. Handle
	equal arguments.

2013-04-03  Jakub Jelinek  <jakub@redhat.com>

	PR c/19449
	* tree.h (force_folding_builtin_constant_p): New decl.
	* builtins.c (force_folding_builtin_constant_p): New variable.
	(fold_builtin_constant_p): Fold immediately also if
	force_folding_builtin_constant_p.

2013-04-03  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/56812
	* tree-vect-data-refs.c (vect_slp_analyze_data_ref_dependence):
	DRs of the same interleaving chain are independent.

2013-04-02  Jason Merrill  <jason@redhat.com>

	* gdbinit.in (pbb): Use debug fn.

2013-04-02  Lawrence Crowl  <crowl@google.com>
